tweaked the styling for the table, spacing, theme issue, added margins to the cards, centered the table.

--- a/theme.css
+++ b/theme.css
@@ -163,8 +163,8 @@ button#btnSearch:hover {
 }
 
 .table tr:hover {
-    background-color: var(--table-hover-background-color);
-    color: var(--table-hover-color);
+    background-color: var(--table-tr-hover-background-color);
+    color: var(--table-tr-hover-color);
     cursor: pointer;
 }
 
